--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-	name: Shawn Olichwier, Adventurer in Data Science and Beyond
+	name: Shawn Olichwier, Explorer of Data Science and Beyond
 	markdown: kramdown
