--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-dinky
+title: Welcome to Shawn's Homepage
+description: Bookmark this page to keep up up to date with new projects
